created mock up church website

--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,14 +1,6 @@
 .main {
     position: relative;
 }
-.carousel {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 99;
-}
 
 .cIItem {
     display: flex;
@@ -19,3 +11,10 @@
 #img {
     height: 70vh;
 }
+
+
+.theMap{ 
+    margin-top: 10px;
+    width: 80%; 
+    height: 70vh;
+} 
