--- a/src/components/head.css
+++ b/src/components/head.css
@@ -1,7 +1,8 @@
+
 .contain {
     display: flex;
     justify-content: space-between;
-    background-color: transparent;
+    background-color: grey;
     height: 12vh;
     font-family: 22px scheme;
     text-transform: uppercase;
@@ -15,7 +16,7 @@
     width: 25%;
     font-weight: 400;
     font-style: normal;
-    font-size: 1vh;
+    font-size: 90%;
     letter-spacing: 1.52px;
 }
 
@@ -24,6 +25,7 @@
     justify-content: space-around;
     align-items: center;
     width: 50%;
+    
 }
 
 .link {
@@ -32,4 +34,7 @@
 }
 .header {
     font-size: 3vh;
+}
+.text {
+    font-size: 2.5vh;
 }
