--- a/src/components/home.css
+++ b/src/components/home.css
@@ -15,6 +15,23 @@
 
 .theMap{ 
     margin-top: 10px;
-    width: 80%; 
-    height: 70vh;
+    width: 60%; 
+    height: 55vh;
 } 
+
+.mapDiv {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.homeText {
+    margin-top: 10vh;
+    font-size: 2rem;
+    width: 75%;
+} 
+
+.homeText p {
+    font-size: 1.5rem;
+}
