--- a/src/components/head.css
+++ b/src/components/head.css
@@ -2,14 +2,14 @@
 .contain {
     display: flex;
     justify-content: space-between;
-    background-color: grey;
+    background-color: rgb(39, 38, 38);
     height: 12vh;
     font-family: 22px scheme;
     text-transform: uppercase;
     color: #fff8f0;
 }
 
-.title {
+.titles {
     display: flex;
     align-items: center;
     text-align: start;
@@ -17,8 +17,12 @@
     width: 25%;
     font-weight: 400;
     font-style: normal;
-    font-size: 90%;
+    font-size: 85%;
     letter-spacing: 1.52px;
+}
+
+.headers {
+    font-size: 3vh;
 }
 
 .links {
@@ -29,13 +33,76 @@
     
 }
 
+.link1 {
+    text-decoration: none;
+    color: #fff8f0;
+}
+
 .link {
     text-decoration: none;
     color: #fff8f0;
 }
+
 .header {
     font-size: 3vh;
 }
+
 .text {
     font-size: 2.5vh;
+}
+
+.drop {
+    display: none;
+}
+
+.dropMenu {
+    display: flex;
+    flex-wrap: wrap;
+    background-color: gray;
+    width: 2vh;
+}
+
+.contact {
+    width: 95%;
+}
+
+.drop-down {
+    color: white;
+}
+
+.contactText {
+    font-size: 100%;
+}
+
+@media screen and (max-width: 980px){
+    .links {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 980px){
+    .drop {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 30%;
+    }
+}
+
+@media screen and (max-width: 980px){
+    .header {
+        font-size: 2vh;
+    }
+}
+
+@media screen and (max-width: 980px){
+    .titles {
+        width: 50%
+    }
+}
+
+@media screen and (max-width: 980px){
+    .link {
+        color: gray;
+    }
 }
