--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -7,6 +7,16 @@
 }
 
 .mainCont2 {
-    width: 35%;
+   width: 35%;
    color: honeydew;
+}
+
+.mainCont2 p {
+    font-size: 1.5vh;
+}
+
+@media screen and (max-width: 980px){
+    .mainCont2 {
+        width: 50%;
+    }
 }
