--- a/src/components/home.css
+++ b/src/components/home.css
@@ -32,10 +32,10 @@
     margin-top: 10vh;
     font-size: 2rem;
     width: 75%;
+    letter-spacing: 1.52px;
 } 
 
 .homeText p {
-    text-align: start;
     font-size: 1.5rem;
 }
 
