--- a/src/components/head.css
+++ b/src/components/head.css
@@ -42,6 +42,10 @@
     text-decoration: none;
     color: #fff8f0;
 }
+.link2 {
+    text-decoration: none;
+    color: rgb(88, 88, 88);
+}
 
 .header {
     font-size: 3vh;
@@ -58,6 +62,7 @@
 .dropMenu {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     background-color: gray;
     width: 2vh;
 }
